--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,35 @@
 server {
+    server_tokens off;
     listen 80;
+    server_name 127.0.0.1;
+
+    location /media/ {
+        proxy_set_header Host $http_host;
+        alias /app/media/recipes/images/;
+    }
+
+
+    location /static/admin/ {
+        proxy_set_header Host $http_host;
+        root /static/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8080/api/;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8080/admin/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -17,5 +43,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 }
