--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
     image: postgres:13
     ports:
       - 5432:5432
-    env_file: ../.env
+    env_file: .env
     volumes:
       - pg:/var/lib/postgresql/data
   backend:
     image: andreiklevtsov/foodgram_backend
     restart: always
-    env_file: ../.env
+    env_file: .env
     volumes:
       - static:/backend_static/
       - media:/app/media/recipes/images/
@@ -31,7 +31,7 @@ services:
     image: andreiklevtsov/foodgram_nginx
     depends_on:
       - backend
-    env_file: ../.env
+    env_file: .env
     restart: always
     ports:
       - 8080:80
