--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -8,15 +8,16 @@ volumes:
 services:
   db:
     image: postgres:13
+    restart: always
     ports:
       - 5432:5432
-    env_file: .env
+    env_file: ../.env
     volumes:
       - pg:/var/lib/postgresql/data
   backend:
     image: andreiklevtsov/foodgram_backend
     restart: always
-    env_file: .env
+    env_file: ../.env
     volumes:
       - static:/backend_static/
       - media:/app/media/recipes/images/
@@ -27,14 +28,14 @@ services:
     command: cp -r /app/build/. /static/
     volumes:
       - ../frontend/:/app/result_build/
-  nginx:
-    image: andreiklevtsov/foodgram_nginx
+  gateway:
+    image: andreiklevtsov/foodgram_gateway
     depends_on:
       - backend
-    env_file: .env
+    env_file: ../.env
     restart: always
     ports:
-      - 80:80
+      - "8080:80"
     volumes:
       - static:/static
       - media:/app/media/recipes/images/
