--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - db
   frontend:
     image: andreiklevtsov/foodgram_frontend
-    command: cp -r /app/result_build/. /static/
+#    command: cp -r /app/result_build/. /static/
     volumes:
       - ../frontend/:/app/result_build/
   gateway:
@@ -35,10 +35,11 @@ services:
     env_file: .env
     restart: always
     ports:
-      - "8080:80"
+      - "443:443"
+      - "80:80"
     volumes:
-      - static:/static
-      - media:/app/media/recipes/images/
+      - static:/var/html/static/
+      - media:/var/html/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
