--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - db
   frontend:
     image: andreiklevtsov/foodgram_frontend
-#    command: cp -r /app/result_build/. /static/
+#    command: cp -r /app/result_build/. /static/#
     volumes:
       - ../frontend/:/app/result_build/
   gateway:
