--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -11,13 +11,13 @@ services:
     restart: always
     ports:
       - 5432:5432
-    env_file: .env
+    env_file: ../.env
     volumes:
       - pg:/var/lib/postgresql/data
   backend:
     image: andreiklevtsov/foodgram_backend
     restart: always
-    env_file: .env
+    env_file: ../.env
     volumes:
       - static:/backend_static/
       - media:/app/media/recipes/images/
@@ -29,16 +29,16 @@ services:
     volumes:
       - ../frontend/:/app/result_build/
   gateway:
-    image: andreiklevtsov/foodgram_gateway
+    image: nginx:1.19.3
     depends_on:
       - backend
-    env_file: .env
+    env_file: ../.env
     restart: always
     ports:
       - "8080:80"
     volumes:
-      - static:/static
-      - media:/app/media/recipes/images/
+      - static:/var/html/static/
+      - media:/var/html/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
