--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     image: andreiklevtsov/foodgram_frontend
     command: cp -r /app/build/. /static/
     volumes:
-      - ../frontend/:/app/result_build/
+      - ./frontend/:/app/result_build/
   gateway:
     image: nginx:1.19.3
     depends_on:
@@ -40,5 +40,5 @@ services:
       - static:/var/html/static/
       - media:/var/html/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ./frontend/build:/usr/share/nginx/html/
+      - ./docs/:/usr/share/nginx/html/api/docs/
