--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - static:/var/html/static/
+      - static:/static/
       - media:/var/html/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
