--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,34 +1,41 @@
 server {
-    listen 443 ssl;
     listen 80;
     index index.html;
     server_tokens off;
+    client_max_body_size 10M;
 
     location /media/ {
         proxy_set_header Host $http_host;
-        alias /app/media/recipes/images/;
+        root /etc/nginx/html;
+#       alias /app/media/recipes/images/;
     }
 
+#    location /static/admin/ {
+#        proxy_set_header Host $http_host;
+#        root /static/;
+#    }
 
-    location /static/admin/ {
-        proxy_set_header Host $http_host;
+    location ~ ^/static/(admin|rest_framework)/ {
         root /static/;
     }
 
-    location /api/docs/ {
+    location ~ ^/api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
 
-    location /api/ {
+#    location /api/ {
+#        proxy_set_header        Host $host;
+#        proxy_set_header        X-Forwarded-Host $host;
+#        proxy_set_header        X-Forwarded-Server $host;
+#        proxy_pass http://backend:8080/api/;
+#    }
+
+    location ~ ^/(api|admin/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8080/api/;
-    }
-
-    location /admin/ {
-        proxy_pass http://backend:8080/admin/;
+        proxy_set_header        X-Forwarded-Server $host
+        proxy_pass http://backend:8080;
     }
 
     location / {
