--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -6,14 +6,14 @@ server {
 
     location /media/ {
         proxy_set_header Host $http_host;
-        root /etc/nginx/html;
+        root /var/html;
     }
 
     location ~ ^/static/(admin|rest_framework)/ {
-        root /static/;
+        root /var/html;
     }
 
-    location ~ ^/api/docs/ {
+    location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
