--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -4,6 +4,7 @@ volumes:
   pg:
   static:
   media:
+  redoc:
 
 
 services:
@@ -20,6 +21,7 @@ services:
     volumes:
       - static:/app/static/
       - media:/app/media/
+      - redoc:/app/docs/
     depends_on:
       - db
   frontend:
@@ -29,15 +31,14 @@ services:
       - ./frontend/:/app/result_build/
   gateway:
     image: nginx:1.19.3
-    depends_on:
-      - backend
-    env_file: ../.env
     restart: always
     ports:
       - "8080:80"
     volumes:
-      - static:/static/
-      - media:/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
-      - ./docs/:/usr/share/nginx/html/api/docs/
+      - redoc:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    depends_on:
+      - backend
