--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -11,6 +11,8 @@ services:
   db:
     image: postgres:13
     restart: always
+    ports:
+      - 5432:5432
     env_file: ../.env
     volumes:
       - pg:/var/lib/postgresql/data
@@ -26,9 +28,11 @@ services:
       - db
   frontend:
     image: andreiklevtsov/foodgram_frontend
-    command: cp -r /app/build/. /static/
     volumes:
       - ./frontend/:/app/result_build/
+    depends_on:
+      - backend
+
   gateway:
     image: nginx:1.19.3
     restart: always
@@ -38,7 +42,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
       - redoc:/usr/share/nginx/html/api/docs/
-      - static:/var/html/static/
+      - static:/static/
       - media:/var/html/media/
     depends_on:
       - backend
