--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -6,11 +6,11 @@ server {
 
     location /media/ {
         proxy_set_header Host $http_host;
-        root /var/html;
+        root /var/html/media;
     }
 
     location ~ ^/static/(admin|rest_framework)/ {
-        root /var/html;
+        root /static/;
     }
 
     location /api/docs/ {
