--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
       - redoc:/usr/share/nginx/html/api/docs/
-      - static:/static/
+      - static:/collected_static/
       - media:/var/html/media/
     depends_on:
       - backend
