--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -4,8 +4,6 @@ volumes:
   pg:
   static:
   media:
-  redoc:
-
 
 services:
   db:
@@ -41,8 +39,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
-      - redoc:/usr/share/nginx/html/api/docs/
-      - static:/collected_static/
+      - static:/var/html/static/
       - media:/var/html/media/
     depends_on:
       - backend
