--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -5,12 +5,11 @@ server {
     client_max_body_size 10M;
 
     location /media/ {
-        proxy_set_header Host $http_host;
-        root /var/html/media;
+        root /var/html;
     }
 
     location ~ ^/static/(admin|rest_framework)/ {
-        root /static/;
+        root /var/html;
     }
 
     location /api/docs/ {
@@ -18,11 +17,19 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
-    location ~ ^/(api|admin/ {
+    location /api/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host
+        proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://backend:8080;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8080/admin/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
     }
 
     location / {
